@@ -109,6 +109,10 @@ class Autopromote {
 			case APCOND_INGROUPS:
 				$groups = array_slice( $cond, 1 );
 				return count( array_intersect( $groups, $user->getGroups() ) ) == count( $groups );
+			case APCOND_ISIP:
+				return $cond[1] == wfGetIP();
+			case APCOND_IPINRANGE:
+				return IP::isInRange( wfGetIP(), $cond[1] );
 			default:
 				$result = null;
 				wfRunHooks( 'AutopromoteCondition', array( $cond[0], array_slice( $cond, 1 ), $user, &$result ) );
